samples/_failures_safe/1761375676_d2b791_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_617bfa08.c: In function ‘main’:
./samples/SAFE/__tmp_617bfa08.c:147:5: error: expected declaration or statement at end of input
  147 |     printf("\nMatrix 1:\n");
      |     ^~~~~~
